# libde265-rust

./: Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
examples/: demo.rs
libde265-static/: Cargo.toml  build.rs
libde265-sys/: Cargo.toml  build.rs
libde265-sys/src/: ffi.rs  lib.rs
src/: decoder.rs  encoder.rs  error.rs  image.rs  lib.rs
