[package]
name = "libde265-static"
version = "0.1.0"
edition = "2024"
description = "Statically built libdeH265. See libde265-sys"
authors = ["Andrey Tkachenko <andrey@aidev.ru>", "Axel Karjalainen <axel@axka.fi>"]
keywords = ["multimedia", "encoding", "video"]
categories = ["api-bindings", "multimedia::video"]
documentation = "https://docs.rs/libde265-static/"
repository = "https://github.com/andreytkachenko/libde265-rust"
license = "MIT OR Apache-2.0"
build = "build.rs"

[features]
generate-bindings = []
encoder = []

[build-dependencies]
anyhow = "1.0"
curl = "0.4"
bindgen = "0.72"
cc = "1.0"
walkdir = "2.5"
const_format = "0.2"
flate2 = "1.0"
tar = "0.4"
