[package]
name = "libde265-sys"
version = "0.1.1"
edition = "2021"
description = "Low-level bindings for libdeH265."
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
keywords = ["multimedia", "encoding", "video"]
categories = ["api-bindings", "multimedia::video"]
documentation = "https://docs.rs/libde265-sys/"
repository = "https://github.com/andreytkachenko/libde265-rust"
license = "MIT OR Apache-2.0"
build = "build.rs"

[features]
default = ["system"]
system = []
static = ["dep:libde265-static"]
generate-bindings = ["dep:libde265-static", "libde265-static/generate-bindings"]
encoder = ["dep:libde265-static", "libde265-static/encoder"]

[dependencies]
libde265-static = { path = "../libde265-static", version = "0.1.0", optional = true }
